[gd_scene load_steps=3 format=3 uid="uid://cali3d76oxemv"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_42tg3"]
[ext_resource type="Texture2D" uid="uid://bvj2wdi2l71eo" path="res://assets/sprites/ship_no_thrust.png" id="1_lkiv7"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_42tg3")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(2.7, -0.4)
scale = Vector2(1.02227, 0.73625)
polygon = PackedVector2Array(-10.5769, -10.5263, 10.5769, 0, -10.5769, 10.5263)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_lkiv7")

[node name="VelocityLabel" type="Label" parent="."]
offset_left = -19.0
offset_top = -60.0
offset_right = 21.0
offset_bottom = -37.0

[node name="RotationLabel" type="Label" parent="."]
offset_left = -22.0
offset_top = -32.0
offset_right = 18.0
offset_bottom = -9.0

[node name="speedLabel" type="Label" parent="."]
offset_left = -21.0
offset_top = 8.0
offset_right = 19.0
offset_bottom = 31.0
